--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -39,23 +39,23 @@
       <div class="nav-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav pull-right hidden-print">
           <li>
-            <a class="hidden-sm" href="http://github.com/caarlos0/up"
-              title="Get this theme!">
+            <a class="hidden-sm" href="http://github.com/metapolator/metapolator"
+              title="Download!">
               <i class="icon-download icon-large"></i>
             </a>
-            <a class="visible-sm" href="http://github.com/caarlos0/up"
-              title="Get this theme!">
+            <a class="visible-sm" href="http://github.com/metapolator/metapolator"
+              title="Download!">
               <i class="icon-download icon-large"></i>
-              Get this theme!
+              Download!
             </a>
           </li>
           <li>
-            <a class="hidden-sm" title="About me" href="/about">
+            <a class="hidden-sm" title="About" href="/about">
               <i class="icon-user icon-large"></i>
             </a>
-            <a class="visible-sm" title="About me" href="/about">
+            <a class="visible-sm" title="About" href="/about">
               <i class="icon-user icon-large"></i>
-              About me
+              About
             </a>
           </li>
           <li>
@@ -83,15 +83,13 @@
           <div class="col col-lg-2 col-offset-4">
             <a href="https://twitter.com/{{ site.author.twitter }}">
               <i class="icon icon-twitter icon-4x"></i>
-              <div>Follow me on Twitter.</div>
+              <div>Follow on Twitter</div>
             </a>
           </div>
           <div class="col col-lg-2 next">
             <a href="https://github.com/{{ site.author.github }}">
               <i class="icon icon-github icon-4x"></i>
-              <div>
-                See my github profile.
-              </div>
+              <div>Follow on GitHub</div>
             </a>
           </div>
         </div>
