Updating layout to link to G+ community

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -59,6 +59,15 @@
             </a>
           </li>
           <li>
+            <a class="hidden-sm" title="About" href="https://plus.google.com/u/0/communities/101806205848089229614">
+              <i class="icon-google-plus-sign icon-large"></i>
+            </a>
+            <a class="visible-sm" title="About" href="https://plus.google.com/u/0/communities/101806205848089229614">
+              <i class="icon-google-plus-sign icon-large"></i>
+              G+
+            </a>
+          </li>
+          <li>
             <a class="hidden-sm" href="/atom.xml" title="Atom Feed">
               <i class="icon-rss icon-large"></i>
             </a>
