Adding G+ link to footer

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -59,10 +59,10 @@
             </a>
           </li>
           <li>
-            <a class="hidden-sm" title="About" href="https://plus.google.com/u/0/communities/101806205848089229614">
+            <a class="hidden-sm" title="About" href="{{ site.author.googlepluscommunity }}">
               <i class="icon-google-plus-sign icon-large"></i>
             </a>
-            <a class="visible-sm" title="About" href="https://plus.google.com/u/0/communities/101806205848089229614">
+            <a class="visible-sm" title="About" href="{{ site.author.googlepluscommunity }}">
               <i class="icon-google-plus-sign icon-large"></i>
               G+
             </a>
@@ -93,6 +93,12 @@
             <a href="https://twitter.com/{{ site.author.twitter }}">
               <i class="icon icon-twitter icon-4x"></i>
               <div>Follow on Twitter</div>
+            </a>
+          </div>
+          <div class="col col-lg-2 next">
+            <a href="{{ site.author.googlepluscommunity }}">
+              <i class="icon icon-google-plus-sign icon-4x"></i>
+              <div>Follow on Google+</div>
             </a>
           </div>
           <div class="col col-lg-2 next">
