--- a/templates/view.html
+++ b/templates/view.html
@@ -27,9 +27,9 @@ h2{
 }
 
 #center{
-	top: 800px;
+	top: 500px;
 	bottom: 0;
-	left: -420px;
+	left: -320px;
 	right: 0;
 	height: 0px;
 	width: 0px;
@@ -49,7 +49,6 @@ h2{
 	left: 42%;
 /* 	left: 39.5%; */
 }
-
 
 .menuleftgreen{
 	z-index: 5;
@@ -125,15 +124,15 @@ table, tr, .menuleft {
 }
 
 .menuleft a:hover,
-a:hover .pointparamrow, 
+a:hover .ptparamrow, 
 a:hover .ptname, 
-a:hover .pointparamcell, 
+a:hover .ptparamcell, 
 a:hover .listvalue, 
 a:hover .ptnumber {
 	color:orange;
 }
 
-.pointparamrow{
+.ptparamrow{
 	display:table-row;
 	width: 300px;
 	font: normal 15px/19px Menlo,'Inconsolata',mono;
@@ -148,7 +147,7 @@ a:hover .ptnumber {
 	width: 45px;
 	padding:0 0 0 1;
 }
-.pointparamcell{
+.ptparamcell{
 	width: 235px;
 	display: table-cell;
 }
@@ -250,89 +249,94 @@ paramform.groupval.value = "";
 $:form.render() 
 </div>
 $if form.d.PointName > "0" : 
-    <p style="height:104px;">
+    <p style="height:90px;">
     $:formparam.render() 
     <input style="margin:0;position:relative;top:-35px;left:180px;" type="button" value="clear" onClick="resetparam()">
 	</p>
 <!-- add new parameters here: -->
 <p class="menuleftgreen" >
   $if glyphparam != None :
-    $if glyphparam.startp != None : 
-       <a href="#" class="whitelink" onClick="selectparam('startp'); return false;">startp</a> <a href="javascript:;" class="copyparam">$glyphparam.startp</a><br>
-    $if glyphparam.doubledash != None :
-       <a href="#" class="whitelink" onClick="selectparam('doubledash'); return false;">doubledash</a> <a href="javascript:;" class="copyparam">$glyphparam.doubledash</a><br>
-    $if glyphparam.tripledash != None :
-       <a href="#" class="whitelink" onClick="selectparam('tripledash'); return false;">tripledash</a> <a href="javascript:;" class="copyparam">$glyphparam.tripledash</a><br>
-    $if glyphparam.superleft != None :
-       <a href="#" class="whitelink" onClick="selectparam('superleft'); return false;">superleft</a> <a href="javascript:;" class="copyparam">$glyphparam.superleft</a><br>
-    $if glyphparam.superright != None :
-       <a href="#" class="whitelink" onClick="selectparam('superright'); return false;">superright </a><a href="javascript:;" class="copyparam">$glyphparam.superright</a><br>
-    $if glyphparam.leftp != None :
-       <a href="#" class="whitelink" onClick="selectparam('leftp'); return false;">leftp </a><a href="javascript:;" class="copyparam">$glyphparam.leftp</a><br>
-    $if glyphparam.rightp != None :
-       <a href="#" class="whitelink" onClick="selectparam('rightp'); return false;">rightp </a><a href="javascript:;" class="copyparam">$glyphparam.rightp</a><br>
-    $if glyphparam.downp != None :
-       <a href="#" class="whitelink" onClick="selectparam('downp'); return false;">downp </a><a href="javascript:;" class="copyparam">$glyphparam.downp</a><br>
-    $if glyphparam.upp != None :
-       <a href="#" class="whitelink" onClick="selectparam('upp'); return false;">upp </a><a href="javascript:;" class="copyparam">$glyphparam.upp</a><br>
-    $if glyphparam.dir != None :
-       <a href="#" class="whitelink" onClick="selectparam('dir'); return false;">dir </a><a href="javascript:;" class="copyparam">$glyphparam.dir</a><br>
-    $if glyphparam.leftp2 != None :
-       <a href="#" class="whitelink" onClick="selectparam('leftp2'); return false;">leftp2 </a><a href="javascript:;" class="copyparam">$glyphparam.leftp2</a><br>
-    $if glyphparam.rightp2 != None :
-       <a href="#" class="whitelink" onClick="selectparam('rightp2'); return false;">rightp2 </a><a href="javascript:;" class="copyparam">$glyphparam.rightp2</a><br>
-    $if glyphparam.downp2 != None :
-       <a href="#" class="whitelink" onClick="selectparam('downp2'); return false;">downp2 </a><a href="javascript:;" class="copyparam">$glyphparam.downp2</a><br>
-    $if glyphparam.upp2 != None :
-       <a href="#" class="whitelink" onClick="selectparam('upp2'); return false;">upp2 </a><a href="javascript:;" class="copyparam">$glyphparam.upp2</a><br>
-    $if glyphparam.dir2 != None :
-       <a href="#" class="whitelink" onClick="selectparam('dir2'); return false;">dir2 </a><a href="javascript:;" class="copyparam">$glyphparam.dir2</a><br>
-    $if glyphparam.angle != None :
-       <a href="#" class="whitelink" onClick="selectparam('angle'); return false;">angle </a><a href="javascript:;" class="copyparam">$glyphparam.angle</a><br>
-    $if glyphparam.tension != None :
-       <a href="#" class="whitelink" onClick="selectparam('tension'); return false;">tension </a><a href="javascript:;" class="copyparam">$glyphparam.tension</a><br>
-    $if glyphparam.tensionand != None :
-       <a href="#" class="whitelink" onClick="selectparam('tensionand'); return false;">tensionand </a><a href="javascript:;" class="copyparam">$glyphparam.tensionand</a><br>
-    $if glyphparam.cycle != None :
-       <a href="#" class="whitelink" onClick="selectparam('cycle'); return false;">cycle </a><a href="javascript:;" class="copyparam">$glyphparam.cycle</a><br>
-    $if glyphparam.penshifted != None :
-       <a href="#" class="whitelink" onClick="selectparam('penshifted'); return false;">penshifted </a><a href="javascript:;" class="copyparam">$glyphparam.penshifted</a><br>
-    $if glyphparam.pointshifted != None :
-       <a href="#" class="whitelink" onClick="selectparam('pointshifted'); return false;">pointshifted </a><a href="javascript:;" class="copyparam">$glyphparam.pointshifted</a><br>
-    $if glyphparam.penwidth != None :
-       <a href="#" class="whitelink" onClick="selectparam('penwidth'); return false;">penwidth </a><a href="javascript:;" class="copyparam">$glyphparam.penwidth</a><br>
-    $if glyphparam.overx != None :
-       <a href="#" class="whitelink" onClick="selectparam('overx'); return false;">overx </a><a href="javascript:;" class="copyparam">$glyphparam.overx</a><br>
-    $if glyphparam.overbase != None :
-       <a href="#" class="whitelink" onClick="selectparam('overbase'); return false;">overbase </a><a href="javascript:;" class="copyparam">$glyphparam.overbase</a><br>
-    $if glyphparam.overcap != None :
-       <a href="#" class="whitelink" onClick="selectparam('overcap'); return false;">overcap </a><a href="javascript:;" class="copyparam">$glyphparam.overcap</a><br>
-    $if glyphparam.overasc != None :
-       <a href="#" class="whitelink" onClick="selectparam('overasc'); return false;">overasc </a><a href="javascript:;" class="copyparam">$glyphparam.overasc</a><br>
-    $if glyphparam.overdesc != None :
-       <a href="#" class="whitelink" onClick="selectparam('overdesc'); return false;">overdesc </a><a href="javascript:;" class="copyparam">$glyphparam.overdesc</a><br>
-    $if glyphparam.ascpoint != None :
-       <a href="#" class="whitelink" onClick="selectparam('ascpoint'); return false;">ascpoint </a><a href="javascript:;" class="copyparam">$glyphparam.ascpoint</a><br>
-    $if glyphparam.descpoint != None :
-       <a href="#" class="whitelink" onClick="selectparam('descpoint'); return false;">descpoint </a><a href="javascript:;" class="copyparam">$glyphparam.descpoint</a><br>
-    $if glyphparam.stemcutter != None :
-       <a href="#" class="whitelink" onClick="selectparam('FILLINHERE'); return false;">stemcutter </a><a href="javascript:;" class="copyparam">$glyphparam.stemcutter</a><br>
-    $if glyphparam.stemshift != None :
-       <a href="#" class="whitelink" onClick="selectparam('FILLINHERE'); return false;">stemshift </a><a href="javascript:;" class="copyparam">$glyphparam.stemshift</a><br>
-    $if glyphparam.inktrap_l != None :
-       <a href="#" class="whitelink" onClick="selectparam('FILLINHERE'); return false;">inktrap_l </a><a href="javascript:;" class="copyparam">$glyphparam.inktrap_l</a><br>
-    $if glyphparam.inktrap_r != None :
-       <a href="#" class="whitelink" onClick="selectparam('FILLINHERE'); return false;">inktrap_r </a><a href="javascript:;" class="copyparam">$glyphparam.inktrap_r</a><br>
+	$if glyphparam.PointName != '' :
+		<span class="ptname"><span style="color:white;">$glyphparam.PointName</span></span>
+		<span class="ptparamcell">
+		$if glyphparam.startp != None : 
+		   <a href="#" class="whitelink" onClick="selectparam('startp'); return false;">startp</a> <a href="javascript:;" class="copyparam">$glyphparam.startp</a><br>
+		$if glyphparam.doubledash != None :
+		   <a href="#" class="whitelink" onClick="selectparam('doubledash'); return false;">doubledash</a> <a href="javascript:;" class="copyparam">$glyphparam.doubledash</a><br>
+		$if glyphparam.tripledash != None :
+		   <a href="#" class="whitelink" onClick="selectparam('tripledash'); return false;">tripledash</a> <a href="javascript:;" class="copyparam">$glyphparam.tripledash</a><br>
+		$if glyphparam.superleft != None :
+		   <a href="#" class="whitelink" onClick="selectparam('superleft'); return false;">superleft</a> <a href="javascript:;" class="copyparam">$glyphparam.superleft</a><br>
+		$if glyphparam.superright != None :
+		   <a href="#" class="whitelink" onClick="selectparam('superright'); return false;">superright </a><a href="javascript:;" class="copyparam">$glyphparam.superright</a><br>
+		$if glyphparam.leftp != None :
+		   <a href="#" class="whitelink" onClick="selectparam('leftp'); return false;">leftp </a><a href="javascript:;" class="copyparam">$glyphparam.leftp</a><br>
+		$if glyphparam.rightp != None :
+		   <a href="#" class="whitelink" onClick="selectparam('rightp'); return false;">rightp </a><a href="javascript:;" class="copyparam">$glyphparam.rightp</a><br>
+		$if glyphparam.downp != None :
+		   <a href="#" class="whitelink" onClick="selectparam('downp'); return false;">downp </a><a href="javascript:;" class="copyparam">$glyphparam.downp</a><br>
+		$if glyphparam.upp != None :
+		   <a href="#" class="whitelink" onClick="selectparam('upp'); return false;">upp </a><a href="javascript:;" class="copyparam">$glyphparam.upp</a><br>
+		$if glyphparam.dir != None :
+		   <a href="#" class="whitelink" onClick="selectparam('dir'); return false;">dir </a><a href="javascript:;" class="copyparam">$glyphparam.dir</a><br>
+		$if glyphparam.leftp2 != None :
+		   <a href="#" class="whitelink" onClick="selectparam('leftp2'); return false;">leftp2 </a><a href="javascript:;" class="copyparam">$glyphparam.leftp2</a><br>
+		$if glyphparam.rightp2 != None :
+		   <a href="#" class="whitelink" onClick="selectparam('rightp2'); return false;">rightp2 </a><a href="javascript:;" class="copyparam">$glyphparam.rightp2</a><br>
+		$if glyphparam.downp2 != None :
+		   <a href="#" class="whitelink" onClick="selectparam('downp2'); return false;">downp2 </a><a href="javascript:;" class="copyparam">$glyphparam.downp2</a><br>
+		$if glyphparam.upp2 != None :
+		   <a href="#" class="whitelink" onClick="selectparam('upp2'); return false;">upp2 </a><a href="javascript:;" class="copyparam">$glyphparam.upp2</a><br>
+		$if glyphparam.dir2 != None :
+		   <a href="#" class="whitelink" onClick="selectparam('dir2'); return false;">dir2 </a><a href="javascript:;" class="copyparam">$glyphparam.dir2</a><br>
+		$if glyphparam.angle != None :
+		   <a href="#" class="whitelink" onClick="selectparam('angle'); return false;">angle </a><a href="javascript:;" class="copyparam">$glyphparam.angle</a><br>
+		$if glyphparam.tension != None :
+		   <a href="#" class="whitelink" onClick="selectparam('tension'); return false;">tension </a><a href="javascript:;" class="copyparam">$glyphparam.tension</a><br>
+		$if glyphparam.tensionand != None :
+		   <a href="#" class="whitelink" onClick="selectparam('tensionand'); return false;">tensionand </a><a href="javascript:;" class="copyparam">$glyphparam.tensionand</a><br>
+		$if glyphparam.cycle != None :
+		   <a href="#" class="whitelink" onClick="selectparam('cycle'); return false;">cycle </a><a href="javascript:;" class="copyparam">$glyphparam.cycle</a><br>
+		$if glyphparam.penshifted != None :
+		   <a href="#" class="whitelink" onClick="selectparam('penshifted'); return false;">penshifted </a><a href="javascript:;" class="copyparam">$glyphparam.penshifted</a><br>
+		$if glyphparam.pointshifted != None :
+		   <a href="#" class="whitelink" onClick="selectparam('pointshifted'); return false;">pointshifted </a><a href="javascript:;" class="copyparam">$glyphparam.pointshifted</a><br>
+		$if glyphparam.penwidth != None :
+		   <a href="#" class="whitelink" onClick="selectparam('penwidth'); return false;">penwidth </a><a href="javascript:;" class="copyparam">$glyphparam.penwidth</a><br>
+		$if glyphparam.overx != None :
+		   <a href="#" class="whitelink" onClick="selectparam('overx'); return false;">overx </a><a href="javascript:;" class="copyparam">$glyphparam.overx</a><br>
+		$if glyphparam.overbase != None :
+		   <a href="#" class="whitelink" onClick="selectparam('overbase'); return false;">overbase </a><a href="javascript:;" class="copyparam">$glyphparam.overbase</a><br>
+		$if glyphparam.overcap != None :
+		   <a href="#" class="whitelink" onClick="selectparam('overcap'); return false;">overcap </a><a href="javascript:;" class="copyparam">$glyphparam.overcap</a><br>
+		$if glyphparam.overasc != None :
+		   <a href="#" class="whitelink" onClick="selectparam('overasc'); return false;">overasc </a><a href="javascript:;" class="copyparam">$glyphparam.overasc</a><br>
+		$if glyphparam.overdesc != None :
+		   <a href="#" class="whitelink" onClick="selectparam('overdesc'); return false;">overdesc </a><a href="javascript:;" class="copyparam">$glyphparam.overdesc</a><br>
+		$if glyphparam.ascpoint != None :
+		   <a href="#" class="whitelink" onClick="selectparam('ascpoint'); return false;">ascpoint </a><a href="javascript:;" class="copyparam">$glyphparam.ascpoint</a><br>
+		$if glyphparam.descpoint != None :
+		   <a href="#" class="whitelink" onClick="selectparam('descpoint'); return false;">descpoint </a><a href="javascript:;" class="copyparam">$glyphparam.descpoint</a><br>
+		$if glyphparam.stemcutter != None :
+		   <a href="#" class="whitelink" onClick="selectparam('stemcutter'); return false;">stemcutter </a><a href="javascript:;" class="copyparam">$glyphparam.stemcutter</a><br>
+		$if glyphparam.stemshift != None :
+		   <a href="#" class="whitelink" onClick="selectparam('stemshift'); return false;">stemshift </a><a href="javascript:;" class="copyparam">$glyphparam.stemshift</a><br>
+		$if glyphparam.inktrap_l != None :
+		   <a href="#" class="whitelink" onClick="selectparam('inktrap_l'); return false;">inktrap_l </a><a href="javascript:;" class="copyparam">$glyphparam.inktrap_l</a><br>
+		$if glyphparam.inktrap_r != None :
+		   <a href="#" class="whitelink" onClick="selectparam('inktrap_r'); return false;">inktrap_r </a><a href="javascript:;" class="copyparam">$glyphparam.inktrap_r</a><br>
 </p>
        
 	<form action="" method="post">
 $if form.d.groupn > "0" : 
-    <p style="height:104px;"> $:formparamG.render() 
+    <p style="height:90px;"> $:formparamG.render() 
     &nbsp;<input style="position:relative;top:-35px;left:180px;" type="button" value="clear" onClick="resetgroup()">
 	</p>
 
 <p class="menuleftorange" > 
-    $if groupparam != None :
+$if groupparam != None :
+	<span class="ptname"></span>
+	<span class="ptparamcell">
     $if groupparam.startp != None : 
        <a href="#" class="whitelink" onClick="selectgroup('startp'); return false;">startp</a> <a href="javascript:;" class="copygroup">$groupparam.startp</a><br>
     $if groupparam.doubledash != None :
@@ -392,13 +396,14 @@ $if form.d.groupn > "0" :
     $if groupparam.descpoint != None :
        <a href="#" class="whitelink" onClick="selectgroup('descpoint'); return false;">descpoint </a><a href="javascript:;" class="copygroup">$groupparam.descpoint</a><br>
     $if groupparam.stemcutter != None :
-       <a href="#" class="whitelink" onClick="selectgroup('FILLINHERE'); return false;">stemcutter </a><a href="javascript:;" class="copygroup">$groupparam.stemcutter</a><br>
+       <a href="#" class="whitelink" onClick="selectgroup('stemcutter'); return false;">stemcutter </a><a href="javascript:;" class="copygroup">$groupparam.stemcutter</a><br>
     $if groupparam.stemshift != None :
-       <a href="#" class="whitelink" onClick="selectgroup('FILLINHERE'); return false;">stemshift </a><a href="javascript:;" class="copygroup">$groupparam.stemshift</a><br>
+       <a href="#" class="whitelink" onClick="selectgroup('stemshift'); return false;">stemshift </a><a href="javascript:;" class="copygroup">$groupparam.stemshift</a><br>
     $if groupparam.inktrap_l != None :
-       <a href="#" class="whitelink" onClick="selectgroup('FILLINHERE'); return false;">inktrap_l </a><a href="javascript:;" class="copygroup">$groupparam.inktrap_l</a><br>
+       <a href="#" class="whitelink" onClick="selectgroup('inktrap_l'); return false;">inktrap_l </a><a href="javascript:;" class="copygroup">$groupparam.inktrap_l</a><br>
     $if groupparam.inktrap_r != None :
-       <a href="#" class="whitelink" onClick="selectgroup('FILLINHERE'); return false;">inktrap_r </a><a href="javascript:;" class="copygroup">$groupparam.inktrap_r</a><br>
+       <a href="#" class="whitelink" onClick="selectgroup('inktrap_r'); return false;">inktrap_r </a><a href="javascript:;" class="copygroup">$groupparam.inktrap_r</a><br>
+	</span>
 </p>
 
 
@@ -408,11 +413,11 @@ $if form.d.groupn > "0" :
 $for ppp in postspa:
    $if ppp.PointName != '' :
 	 <a href="/view/$ppp.id">
-		 <div class="pointparamrow">
+		 <div class="ptparamrow">
 			 <div class="ptname">
 			 $ppp.PointName
 			 </div>
-			 <div class="pointparamcell">
+			 <div class="ptparamcell">
 			 $if ppp.startp != None :
 				 startp&nbsp;<span class="listvalue">$ppp.startp</span>
 			 $if ppp.doubledash != None :
