--- a/templates/viewfont.html
+++ b/templates/viewfont.html
@@ -30,6 +30,9 @@ h3_c {
 	font-size:72px;
 	color:black;
 }
+.text:hover {
+	outline: 3px solid lightgrey;
+}
 p,h2,.menu,table,th,td,#ruler {
 	font:normal 15px/19px Menlo,'Inconsolata',mono;
 }
@@ -65,6 +68,6 @@ table,th,td {
 <br></p>
 </h3_b>
 
-<div class="text">
+<div class="text" contenteditable="true">
 Hypies: deresto ning har greave itut ma ves. Theas nuten. Casity unt's of Korand se deat 78 derike oceto tictila soublo by off therat hopent younte iscand, to hemods anne goll res they kil eneurm parun st at inder are of herumin lactoo thelic re o piencun het Kano han to modue sive thendi his et but yerrui Shreme a bunown, youdin ang eta viemst pros of des dreppa hallys gruit glar extram sh a Influ. Boonct dosto se, inum sareu pale proall sin, thern dich whista: H. By ecesse of taatin ada somnit usieri uni Trebri der-orden bects ill muste gives, sonfer Pepint woriza Newe dandar, ho na difill gro But hard trocam thatio P. Piesse whaven de: Infica (in unfrow, my tronve the ons than Emory, medide sor a ers, objech wit frund themach of He wingen tely as prelle goorie ness. Fig in the un gra luilit whetar. I cona pointu kon may bact: Hordom Mout he mainne he vor ch, a ridall of ill unduso si a gaskon mosets therel shicat chavic aus; a note lusts de Hen en ther Bodue na dur ingle tion panted wele, preste to to wer anad my oste the Pandne. En vo expost whoto asentio thouce weeili red thered thatia that, sekten lue peroci gooday - Cou nerevo youvem ing becam. Kuld, Galvat is. A Book of gra. We magrae inforl. Tale, nailie, they rocout evoi roren wittle onifet Roso smark ze pened ther? I seepeco ing-esore forter, cond ressen tolty cot che therda; preolu ca preal Rogine Dides. Whaide me le; o resedre weinctu, ne erre obor In labose ent of Int (courstra on hatiol et examok am a da zen; an kage, pauly; epons gle, quent asa cout com on sibity cluen poloss. Yort dets hou a babine assiscu wascan, of youres (ork un cove sitter hippla pather or heilis of relog. I welsed nadest, all tolecte, que con viss peresi jecia de yough (151 Auggis Itabit cornme paged itteca mostri many. At cunth melsor ponger quing hispes ousiou cosett ing gost Jestro. I wit willue, hey (Here: Comnis hicion, Propeca thoupo unted stimma and ala solic der sa, pal 1, ist atiocio, mory ch th, herlin ge onter dur witeme dus andess cialce I. Swengue, willy ladare dier procclu, asight duceas subteha qual pariel gle: Applet of en mys wah (19980, Jansible ont na na a an insur domedu, erfunwer actild wasuble obseme de quat witut ent, scansubli oungle, des wers que for onet, cosper to reldes movese, man, dessoct. 26 100 Ete duregul dy’s ofi st, 453, sediti ist con. Tophys werte peren viets rest Laws: quent antent que,” appidu lest havou win solost thatha sa presuct isaits. Que? End mical th, a ret the dended iner” de veralu inhave th Bus in gand berin funtio Socie. Sin offel eink berde Mingur. Sor ranifin of greque si nion pran i larg, denrat. Houtte derogn ise fresa no de thatic ingima te. We dous. Eve inwars colvium God a dichei la presse, comentus, propit huse ande heopy sies grands, 85. De be wasin Sunal o ent, youdant vois hichad theirri posteg th manza post an alet befic sucten. Eng anals. Glor; maintra of ar the gleavi at iss, nentra Dell Rathin eavate ing eratis ron erivie curtes berver to thim Jand ne u.
 </div>
